--- a/.classpath
+++ b/.classpath
@@ -32,5 +32,29 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Mario/Downloads/javax.mail.jar"/>
+	<classpathentry kind="lib" path="D:/jars/byte-buddy-1.7.5.jar"/>
+	<classpathentry kind="lib" path="D:/jars/client-combined-3.6.0.jar"/>
+	<classpathentry kind="lib" path="D:/jars/client-combined-3.6.0-sources.jar"/>
+	<classpathentry kind="lib" path="D:/jars/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="D:/jars/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="D:/jars/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="D:/jars/cucumber-core-1.2.5.jar"/>
+	<classpathentry kind="lib" path="D:/jars/cucumber-html-0.2.3.jar"/>
+	<classpathentry kind="lib" path="D:/jars/cucumber-java-1.2.5.jar"/>
+	<classpathentry kind="lib" path="D:/jars/cucumber-junit-1.2.5.jar"/>
+	<classpathentry kind="lib" path="D:/jars/cucumber-jvm-deps-1.0.5.jar"/>
+	<classpathentry kind="lib" path="D:/jars/cucumber-testng-1.2.5.jar"/>
+	<classpathentry kind="lib" path="D:/jars/gherkin-2.12.2.jar"/>
+	<classpathentry kind="lib" path="D:/jars/gson-2.8.0.jar"/>
+	<classpathentry kind="lib" path="D:/jars/guava-23.0.jar"/>
+	<classpathentry kind="lib" path="D:/jars/hamcrest-all-1.3.jar"/>
+	<classpathentry kind="lib" path="D:/jars/httpclient-4.5.3.jar"/>
+	<classpathentry kind="lib" path="D:/jars/httpcore-4.4.6.jar"/>
+	<classpathentry kind="lib" path="D:/jars/jcommander.jar"/>
+	<classpathentry kind="lib" path="D:/jars/jna-4.1.0.jar"/>
+	<classpathentry kind="lib" path="D:/jars/jna-platform-4.1.0.jar"/>
+	<classpathentry kind="lib" path="D:/jars/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="D:/jars/testng-6.13.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
