--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,22 @@
   <artifactId>mail</artifactId>
   <version>1.4.5</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all -->
+<dependency>
+    <groupId>org.hamcrest</groupId>
+    <artifactId>hamcrest-all</artifactId>
+    <version>1.3</version>
+    <scope>test</scope>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+<dependency>
+    <groupId>io.rest-assured</groupId>
+    <artifactId>rest-assured</artifactId>
+    <version>3.0.7</version>
+    <scope>test</scope>
+</dependency>
+
         </dependencies>
         
 
